finish the task